ランキング表示人数を10人まで増やしました

--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,31 @@
                         <td id = "name_5" align="center" width="200">no data</td>
                         <td id = "name_5" align="center" width="150">-</td>
                     </tr>
+                    <tr>
+                        <td align="right" nowrap>6位</td>
+                        <td id = "name_6" align="center" width="200">no data</td>
+                        <td id = "name_6" align="center" width="150">-</td>
+                    </tr>
+                    <tr>
+                        <td align="right" nowrap>7位</td>
+                        <td id = "name_7" align="center" width="200">no data</td>
+                        <td id = "name_7" align="center" width="150">-</td>
+                    </tr>
+                    <tr>
+                        <td align="right" nowrap>8位</td>
+                        <td id = "name_8" align="center" width="200">no data</td>
+                        <td id = "name_8" align="center" width="150">-</td>
+                    </tr>
+                    <tr>
+                        <td align="right" nowrap>9位</td>
+                        <td id = "name_9" align="center" width="200">no data</td>
+                        <td id = "name_9" align="center" width="150">-</td>
+                    </tr>
+                    <tr>
+                        <td align="right" nowrap>10位</td>
+                        <td id = "name_10" align="center" width="200">no data</td>
+                        <td id = "name_10" align="center" width="150">-</td>
+                    </tr>
                 </table> 
             </center>
         </div>
